tests/errors/undeclared_set_op.l26
{
    add t 5;        // error: t is undeclared
}
